[workspace]
members = ["time-macros"]
resolver = "2"

[package]
name = "time"
version = "0.3.5"
authors = ["Jacob Pratt <open-source@jhpratt.dev>", "Time contributors"]
edition = "2018"
repository = "https://github.com/time-rs/time"
homepage = "https://time-rs.github.io"
keywords = ["date", "time", "calendar", "duration"]
categories = ["date-and-time", "no-std", "parser-implementations", "value-formatting"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "Date and time library. Fully interoperable with the standard library. Mostly compatible with #![no_std]."
include = ["src/**/*", "LICENSE-*", "README.md", "!src/tests.rs"]

[lib]
bench = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "__time_03_docs"]

[features]
default = ["std"]
alloc = []
formatting = ["itoa", "std"]
large-dates = ["time-macros/large-dates"] # use case for weak feature dependencies (rust-lang/cargo#8832)
local-offset = ["std"]
macros = ["time-macros"]
parsing = []
quickcheck = ["quickcheck-dep", "alloc"]
serde-human-readable = ["serde", "formatting", "parsing"]
std = ["alloc"]

[dependencies]
itoa = { git = "https://github.com/mesalock-linux/itoa-sgx", tag = "sgx_1.1.3", optional = true }
quickcheck-dep = { package = "quickcheck", git = "https://github.com/mesalock-linux/quickcheck-sgx", tag = "sgx_1.1.3", default-features = false, optional = true }
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "sgx_1.1.3", optional = true, default-features = false }
serde = {git = "https://github.com/mesalock-linux/serde-sgx", tag = "sgx_1.1.3", optional = true, default-features = false }
time-macros = { version = "=0.2.3", path = "time-macros", optional = true }
#porting for sgx
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", unsound_local_offset))'.dependencies]
libc = "0.2.98"

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
num_threads = "0.1.0"

[dev-dependencies]
rand = { git = "https://github.com/mesalock-linux/rand-sgx", tag = "sgx_1.1.3", default-features = false }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", tag = "sgx_1.1.3", default-features = false }
serde_test = "1.0.126"

[target.'cfg(__ui_tests)'.dev-dependencies]
trybuild = "=1.0.34"

[target.'cfg(bench)'.dev-dependencies]
criterion = "0.3.5"
criterion-cycles-per-byte = "0.1.2"

# Significant contributions to the benchmarks provided by Emil Lundberg.
[[bench]]
name = "benchmarks"
harness = false
path = "benchmarks/main.rs"

[profile.dev]
debug = 0
